Wed Jun 11 11:07:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tao/PI/DLL_Resident_ORB_Initializer.cpp:
        * tao/PI/DLL_Resident_ORB_Initializer.h:

          Remove prepricated ACE_THROW_SPEC macro and correct filename
          header to correct FUZZ errors from previous commit of:
          Tue Jun 10 14:53:00 UTC 2008  Ciju John

Tue Jun 10 16:32:32 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * TAO_IDL/fe/lex.yy.cpp:

          Removed trailing white space.

        * TAO_IDL/fe/lex.yy.cpp.diff:

          Updated the diff file based on my change from Tue Jun 10 13:21:29
          UTC 2008.

Tue Jun 10 15:00:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * TAO_IDL/be/be_visitor_structure/serializer_op_ch.cpp:

          Another wide character conversion required to get
          the tao_idl working on wide character builds.

Tue Jun 10 14:53:00 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Factory.cpp:
          Tie Security and SSLIOP library lifetimes to that of their
          registered ORBInitializers. This prevents the library getting
          unloaded before the ORBInitializer destructions.

        * tao/CSD_Framework/CSD_Framework_Loader.cpp:
        * tao/CSD_Framework/CSD_POA.cpp:
        * tao/CSD_Framework/CSD_Strategy_Base.h:
        * tao/CSD_Framework/CSD_Strategy_Base.inl:
        * tao/CSD_Framework/CSD_Strategy_Base.cpp:
        * tao/CSD_Framework/CSD_Strategy_Proxy.h:
        * tao/CSD_Framework/CSD_Strategy_Proxy.inl:
        * tao/CSD_ThreadPool/CSD_TP_Strategy.h:
        * tao/CSD_ThreadPool/CSD_TP_Strategy.cpp:
        * tao/ORB_Core.cpp:
          CSD threads borrow the ORB's thread-manager to spawn CSD
          threads. Doing this forces the ORB to wait for CSD cleanup at
          destruction time. This prevents a race between CSD cleanup and
          ORB destruction.

        * tao/PI/DLL_Resident_ORB_Initializer.h: